--- a/Midco.html
+++ b/Midco.html
@@ -28,15 +28,16 @@
     text-align: top;
     padding: 14px 16px;
     text-decoration: none;
-    hover:background-color: #111;
+    font-size:18px;
+    
     } 
 
   img {
     margin:right;
     display: inline;
-    align:middle;
+    text-align: right;
     padding-top: 80px;
-    float:relative;
+    position:absolute;
     } 
       
      /*#setup {
